# NCEPLIBS-bufr

./: .gitignore  CMakeLists.txt  LICENSE.md  README  README.libbufr  README.md  README_8md_source.html  ReleaseNotes_8md_source.html  UserGuide_8md_source.html  VERSION  adn30_8f.html  adn30_8f_source.html  annotated.html  annotated.js  annotated_dup.js  apxdx_8F90.html  apxdx_8F90.js  apxdx_8F90_source.html  arallocc_8c.html  arallocc_8c.js  arallocc_8c_source.html  arallocf.F  arallocf_8F.html  arallocf_8F90.html  arallocf_8F90.js  arallocf_8F90_source.html  arallocf_8F_source.html  arallocf_8f.html  arallocf_8f_source.html  ardllocc_8c.html  ardllocc_8c_source.html  ardllocf.F  ardllocf_8F.html  ardllocf_8F_source.html  ardllocf_8f.html  atrcpt_8f.html  atrcpt_8f_source.html  bfrini_8f.html  bfrini_8f.js  bfrini_8f90.html  (+1369 more)
4byte/: CMakeLists.txt
4byteDA/: CMakeLists.txt
8byte/: CMakeLists.txt
8byteDA/: CMakeLists.txt
Conf/: Analyse_args.sh  Bufr_gnu_General.sh  Bufr_intel_Cray.sh  Bufr_intel_Dell.sh  Bufr_intel_General.sh  Bufr_intel_Hera.sh  Bufr_intel_Theia.sh  Bufr_intel_Wcoss.sh  Collect_info.sh  Gen_cfunction.sh  Reset_version.sh
c_wrapper/: CMakeLists.txt  NCEPLIB-bufr.interface.f90  NCEPLIB-bufr.interface.h  bufrlib_c_wrapper.f90  bufrlib_c_wrapper.h  main.cpp
cmake/: 3  DetermineSite.cmake  FindBaselibs.cmake  FindF2PY.cmake  GNU.cmake  GenericCompiler.cmake  Intel.cmake  NAG.cmake  PackageConfig.cmake.in  UseF2Py.cmake  UseLatex.cmake  UseProTeX.cmake  esma.cmake  esma_add_library.cmake  esma_add_subdirectory.cmake  esma_check_if_debug.cmake  esma_create_stub_component.cmake  esma_fortran_generator_list.cmake  esma_generate_automatic_code.cmake  esma_set_this.cmake  osx_extras.cmake
cxx/: CMakeLists.txt  File.cpp  FortranObject.h  QuerySet.h  ResultSet.cpp  ResultSet.h
docs/: CHANGELOG.md  CMakeLists.txt  Doxyfile.in  Mainpage.md  ReleaseNotes.md  UserGuide.md  dfbfmstab.md  dfbftab.md  dx_tables.md  master_tables.md  user_guide.md  utils.md
double/: CMakeLists.txt
doubleDA/: CMakeLists.txt
python/: CMakeLists.txt  COPYING  _bufrlib.pyf  index.html  ncepbufr.html  search.js  setup.py.in
python/ncepbufr/: __init__.py  bufr_mnemonics.html  bufr_mnemonics.py
python/test/: Python_tutorial_bufr.ipynb  dump_text.py  inventory.py  prepbufr.table  test.py  test_checkpoint.py  test_gps.py  test_misc.py  test_prepbufr.py  test_rad.py  test_satwnd.py  test_write.py
python/utils/: bufrdif.py  check_receipt_times.py  filter_restricted_data  filterbyreceipt_frommsg.py  filterbyreceipt_fromsubset.py  nc2prepbufr  prepbufr2nc  prepbufr_rewrite
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  (+128 more)
src/: CMakeLists.txt  Makefile  README.libbufr  adn30.f  arallocc.c  arallocf.F  arallocf.F90  arallocf.f  ardllocc.c  ardllocf.F  ardllocf.F90  ardllocf.f  atepak.f  atrcpt.f  bfrini.F90.in  bfrini.f  bfrini.f90.in  bitmaps.F90  blocks.F  blocks.F90  blocks.f  bort.f  bort2.f  bort_exit.c  borts.F90  bufr.interface.f90  bufr.interface.h  bufr_c2f_interface.F90  bufr_interface.F90  bufr_interface.f90  bufr_interface.h  bufr_procedures.f90  bufrlib.F90  bufrlib.PRM  bufrlib.h  bufrlib.h.in  bufrlib.inc  bufrlib.inc.in  bvers.f  bvers.f.in  (+480 more)
src/cxx_query_interface/: File.cpp  File.h  FortranObject.cpp  FortranObject.h  QuerySet.cpp  ResultSet.cpp  ResultSet.h  query_interface.f90  query_interface.h
supersize/: CMakeLists.txt
tables/: CMakeLists.txt  bufrtab.CodeFlag_LOC_0_7_1  bufrtab.CodeFlag_STD_0_13  bufrtab.CodeFlag_STD_0_14  bufrtab.CodeFlag_STD_0_15  bufrtab.CodeFlag_STD_0_16  bufrtab.CodeFlag_STD_0_17  bufrtab.CodeFlag_STD_0_18  bufrtab.CodeFlag_STD_0_19  bufrtab.CodeFlag_STD_0_20  bufrtab.CodeFlag_STD_0_21  bufrtab.CodeFlag_STD_0_22  bufrtab.CodeFlag_STD_0_23  bufrtab.CodeFlag_STD_0_24  bufrtab.CodeFlag_STD_0_25  bufrtab.CodeFlag_STD_0_26  bufrtab.CodeFlag_STD_0_27  bufrtab.CodeFlag_STD_0_28  bufrtab.CodeFlag_STD_0_29  bufrtab.CodeFlag_STD_0_30  bufrtab.CodeFlag_STD_0_31  bufrtab.CodeFlag_STD_0_32  bufrtab.CodeFlag_STD_0_33  bufrtab.CodeFlag_STD_0_34  bufrtab.CodeFlag_STD_0_35  bufrtab.CodeFlag_STD_0_36  bufrtab.CodeFlag_STD_0_37  bufrtab.CodeFlag_STD_0_38  bufrtab.CodeFlag_STD_0_39  bufrtab.CodeFlag_STD_0_40  bufrtab.CodeFlag_STD_0_41  bufrtab.CodeFlag_STD_0_42  bufrtab.TableB_LOC_0_7_1  bufrtab.TableB_STD_0_13  bufrtab.TableB_STD_0_14  bufrtab.TableB_STD_0_15  bufrtab.TableB_STD_0_16  bufrtab.TableB_STD_0_17  bufrtab.TableB_STD_0_18  bufrtab.TableB_STD_0_19  (+53 more)
test/: CMakeLists.txt  intest1.F  intest1.F90  intest10.F90  intest11.F90  intest12.F90  intest2.F90  intest3.F90  intest4.F90  intest5.F90  intest6.F90  intest7.F90  intest8.F90  intest9.F90  modq_test.f90  newwint.F90  outtest1.F90  outtest10.F90  outtest11.F90  outtest12.F90  outtest13.F90  outtest2.F90  outtest3.F90  outtest4.F90  outtest5.F90  outtest6.F90  outtest7.F90  outtest8.F90  outtest9.F90  query_playground.cpp  query_playground.f90  run_test_bort.sh  test_IN_1.F  test_IN_1.f  test_IN_2.F  test_IN_2.f  test_IN_3.F  test_IN_3.f  test_IN_4.F  test_IN_4.f  (+39 more)
test/test_scripts/: test_apxdx.sh  test_binv.sh  test_cmpbqm.sh  test_debufr.sh  test_gettab.sh  test_outtest.sh  test_readbp.sh  test_readmp.sh  test_sinv.sh  test_split_by_subset.sh  test_ufbrw_test.sh  test_wrapper_IN.sh  test_wrapper_OUT.sh  test_xbfmg.sh
test/testfiles/: README.md
test/testoutput/: 1bamua.table.out
utils/: CMakeLists.txt  README.md  apxdx.F90  binv.F90  binv.f  binv.f90  cmpbqm.F90  cmpbqm.f  cmpbqm.f90  debufr.F90  debufr.c  debufr.c.in  debufr.f  gettab.f90  print_queries.f90  print_subsets.f90  readbp.F90  readbp.f  readbp.f90  readmp.F90  readmp.f  readmp.f90  sinv.F90.in  sinv.f  sinv.f.in  sinv.f90  sinv.f90.in  split_by_subset.F90  split_by_subset.f90  ufbrw_test.F90  ufbrw_test.f90  xbfmg.c
(+4085 files in other folders)
