cmake_minimum_required(VERSION 2.6)
set(LIBNAME ${CMAKE_PROJECT_NAME}_${VERSION}_8_DA)
file(GLOB LIB_8_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.f ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.F)
file(GLOB LIB_C_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.c)
set_source_files_properties( ${LIB_C_SRC} PROPERTIES COMPILE_FLAGS ${CMAKE_C_8_DA_FLAGS} )
add_definitions( ${CMAKE_Fortran_8_DA_FLAGS} )
add_library(${LIBNAME} STATIC ${LIB_8_SRC} ${LIB_C_SRC} )

install(TARGETS ${LIBNAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 

